testsuite/tests/properties/internal_use/test.out
Error: Def.internal_env_value is for internal use only
In definition of property 'faulty_prop', class 'Def': test.py Line 40
Done
